# napi-events

./: Cargo.toml  README.md  build.rs  index.js  package.json
src/: channel.rs  lib.rs  registry.rs
src/channel/: visitor.rs
